Adding Prettier
